loop_clicker/src/App.css
#root, div {
  user-select: none;
  
  padding: 0px;
  margin: 0px;
  border: 0px;
  vertical-align: top;
}


div {
  vertical-align: top;
}



.mainBoard {
  display: flex;
  align-items: flex-start;
}

.lopsAndUpgrades {
  display: flex;
  position: relative;
}

.loopsAndUpgrades.desktop {
  display: flex;
  position: relative;
  flex-direction: row-reverse;
}

.loopsAndUpgrades.mobile {
  display: flex;
  position: relative;
  flex-direction: column-reverse;
  /* clip-path: inset(300px 0px 0px 0px);
  pointer-events: auto; */
}

.loopBunchColumn {
  width: 400px;
  height: 300px;
  background-color: #242424;
  position:fixed;
  left: 0px;
  top: 0px;
}
/* .loopBunchColumn.desktop{
  width: 400px;
  height: 300px;
  background-color: #242424;
  position:fixed;
  left: 0px;
  top: 0px;

} */

.scoreAndLoopBunch {
  position: fixed;
  display: flex;
  flex-direction: column;
  left: 10px;
  top: 10px;
  /* background-color: black; */
}

.score {
    position: absolute;
    width: 300px;
    /* background-color: black; */
}

.loopBunch {
  position: absolute;
  /* background-color: black; */
}

.loop {
  color: black;
  font-weight: 500;
  text-align: center;
  position: absolute;
  pointer-events: none;
  text-align: center;
}

.textDivInLoop {
  position: absolute;
  color: white;
  text-shadow: 0px 0px 5px black;
}

.upgradesColumn {
  position: relative;
}

.upgradesColumn.mobile{
  position:relative;
  top: 300px;
}
.upgradesColumn.desktop{
  position:relative;
  top: 0px;
  left: 400px;
}

.upgradesComponent {
  display: flex;
  flex-direction: column;
}

.unrevealedUpgrade {
  width: 340px;
  height: 50px;
  background-color: #1a1a1a;
  margin: 5px;
  padding: 0px 30px;
  border-radius: 5px;
  font-weight: 500;
}



.upgrade{
  margin: 0px;
  padding: 5px;
  border: 0px;
  width: 400px;
}

.upgrade p {
  padding: 0px;
  margin: 0px;
  border: 0px;
  
}

.upgrade button {
  width: 400px;
}

.upgrade.upgradeIsDisabled button {
  background-color: #1a1a1a;
}

.upgrade.upgradeIsEnabled button {
  background-color: #062031;
}


.divInUpgrade {
  display: flex;
  pointer-events: none;
}

.upgrade p :not(.upgradeCost.upgradeTitle) {

  color: cornsilk;
}

.upgradeTitleAndInfo {
  width: 400px;
  /* background-color: black; */
}

.upgradeTitle {
  font-size : 1.2em;
  color: yellow;
}

.upgradeCost {
  color: darkgreen;
}

.upgrade button {
  width: 400px;
}

.imageInUpgrade {
  /* position: relative; */
}

.imageInUpgrade img{
  pointer-events: none;
  width: 100px;
  height: 100px;
  background-color: whitesmoke;
  margin: 5px;
}

